# Scientific-Track

./: README.md  echo-jax.py  loschmidt.ipynb  noise.py  pyproject.toml  requirements.txt  starter.ipynb  vqe.ipynb  vqe.py
starter_kit/: README.md  __init__.py  annni.py  exact_diag.py  noise_utils.py  observables.py  plotting.py  reference.py
