[project]
name = "bitcamp-2026-quantum-scientific-track"
version = "0.1.0"
description = "Bitcamp 2026 Quantum Track scientific starter environment"
requires-python = ">=3.14,<3.15"
dependencies = [
    "jupyterlab>=4.4,<5",
    "matplotlib>=3.10,<4",
    "networkx>=3.5,<4",
    "numpy>=2.3,<3",
    "pennylane==0.44.1",
]

[tool.uv]
package = false
