[project]
name = "bitcamp-2026-quantum-scientific-track"
version = "0.1.0"
description = "Bitcamp 2026 Quantum Track scientific starter environment"
dependencies = [
    "custatevec-cu12>=1.13.0",
    "jax>=0.7.1",
    "jupyterlab>=4.4,<5",
    "matplotlib>=3.10,<4",
    "networkx>=3.5,<4",
    "numpy>=2.3,<3",
    "pennylane==0.44.1",
    "pennylane-catalyst>=0.14.1",
    "pennylane-lightning-gpu>=0.44.0",
]

[tool.uv]
package = false
